# rust-html-todo-app

./: .gitignore  Cargo.toml
assets/css/: custom.css
src/: main.rs
templates/: index.html  users.html
